--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
+		"start:prod": "USE_REDIS=true pm2 start build/index.js -i max --update-env",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -31,5 +32,12 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.0",
+		"fetch-retry": "^6.0.0",
+		"pm2": "^5.4.2",
+		"redis": "^4.6.15",
+		"svelte-virtual-scroll-list": "^1.3.0"
+	}
 }
